--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 209445472,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
   "date": "2025-Mar-4",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1016907249
 }
