--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Mar-4",
-  "seed": 1016907249
+  "seed": 1238396366,
+  "date": "2025-Mar-4"
 }
