--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Mar-4",
+  "seed": 1526785803,
   "rate": "4.33",
-  "seed": 1238396366,
-  "date": "2025-Mar-4"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
