--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 892433468,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Mar-4",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33",
+  "seed": 1963340485
 }
