--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Mar-4",
-  "seed": 259559798
+  "seed": 1246163638,
+  "date": "2025-Mar-4"
 }
