--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 840062169,
-  "date": "2025-Mar-4"
+  "date": "2025-Mar-5",
+  "rate": "4.33",
+  "seed": 1888703397
 }
