--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Mar-5",
+  "seed": 1780750270,
   "rate": "4.33",
-  "seed": 1888703397
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Mar-5"
 }
