--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1404568594,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Mar-5",
   "rate": "4.33",
-  "date": "2025-Mar-5"
+  "seed": 260679018,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
