--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Mar-5",
-  "seed": 290289184,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 241513114
 }
