--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Mar-5",
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 174381800
+  "seed": 891186561,
+  "date": "2025-Mar-5",
+  "rate": "4.33"
 }
