--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 891186561,
   "date": "2025-Mar-5",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1670367909,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
