--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 126725246,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
+  "seed": 817434705,
   "date": "2025-Mar-5",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
