--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 817434705,
-  "date": "2025-Mar-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 317277251,
+  "date": "2025-Mar-6",
+  "rate": "4.33"
 }
