--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Mar-6",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1184785869
+  "seed": 2094306382,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Mar-6"
 }
