--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 2094306382,
+  "date": "2025-Mar-6",
+  "seed": 768339175,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Mar-6"
+  "rate": "4.33"
 }
