--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 347845075,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Mar-6",
   "rate": "4.33",
-  "date": "2025-Mar-6"
+  "seed": 75239512
 }
