--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Mar-6",
-  "rate": "4.33",
-  "seed": 75239512
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2004755822,
+  "rate": "4.33"
 }
