--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Mar-6",
+  "seed": 1787100902,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2004755822,
-  "rate": "4.33"
+  "date": "2025-Mar-7"
 }
