--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1787100902,
+  "date": "2025-Mar-7",
+  "seed": 1480428860,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Mar-7"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
