--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Mar-28",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1447870475,
   "rate": "4.33",
-  "seed": 1438303253,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Mar-28"
 }
