--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 683728631,
-  "date": "",
-  "rate": null
+  "date": "2025-Mar-28",
+  "seed": 1049986313
 }
