--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1880444079,
-  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Mar-28",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 824694605,
+  "rate": "4.33"
 }
