--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1121819514,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 939035698,
-  "date": "2025-Mar-28"
+  "date": "2025-Mar-28",
+  "rate": "4.33"
 }
