--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1121819514,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Mar-28",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 719242024
 }
