--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1588463183,
   "date": "2025-Mar-28",
   "rate": "4.33",
-  "seed": 719242024
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
