--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Mar-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1861539333
+  "date": "2025-Mar-28",
+  "seed": 357001842,
+  "rate": "4.33"
 }
