--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Mar-28",
-  "seed": 357001842,
-  "rate": "4.33"
+  "seed": 1789516813,
+  "date": "2025-Mar-31",
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
