--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1499105907,
   "date": "2025-Mar-31",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1402998326
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
