--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 736199338,
   "rate": "4.33",
-  "date": "2025-Mar-31"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Mar-31",
+  "seed": 412956817
 }
