--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Mar-31",
-  "seed": 412956817
+  "rate": "4.33",
+  "seed": 1589961476,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
