--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 520703511,
   "date": "2025-Mar-31",
-  "rate": "4.33",
-  "seed": 1589961476,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
