--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 147115625,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 520703511,
-  "date": "2025-Mar-31",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Mar-31"
 }
