--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 147115625,
+  "date": "2025-Mar-31",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Mar-31"
+  "seed": 1404838026,
+  "rate": "4.33"
 }
