--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Mar-31",
-  "seed": 1497898790,
-  "rate": "4.33"
+  "seed": 76951448,
+  "rate": "4.33",
+  "date": "2025-Mar-31"
 }
