--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Apr-1",
+  "seed": 72304921,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 76951448,
-  "rate": "4.33",
-  "date": "2025-Mar-31"
+  "rate": "4.33"
 }
