--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-1",
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 185840613
+  "date": "2025-Apr-1",
+  "seed": 1962067660,
+  "rate": "4.33"
 }
