--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1888190674,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-1",
-  "seed": 1962067660,
-  "rate": "4.33"
+  "date": "2025-Apr-1"
 }
