--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1698647656,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-1",
   "rate": "4.33",
-  "seed": 86283327
+  "date": "2025-Apr-1"
 }
