--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1608555655,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-1"
+  "date": "2025-Apr-1",
+  "seed": 529088605,
+  "rate": "4.33"
 }
