--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 431407662,
+  "date": "2025-Apr-2",
+  "seed": 1415504980,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Apr-2"
+  "rate": "4.33"
 }
