--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1320712133,
+  "seed": 858091972,
+  "rate": "4.33",
   "date": "2025-Apr-2",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
