--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 915163109,
-  "date": "2025-Apr-2"
+  "date": "2025-Apr-2",
+  "seed": 238496521
 }
