--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2005261379,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Apr-2"
+  "date": "2025-Apr-2",
+  "seed": 110613724,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
