--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2141091972,
   "date": "2025-Apr-2",
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 41897311
+  "rate": "4.33"
 }
