--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-Apr-2",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1733317865
+  "date": "2025-Apr-3",
+  "seed": 1957529405,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
