--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1661472107,
+  "date": "2025-Apr-3",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 33432637,
-  "date": "2025-Apr-3"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
