--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1661472107,
-  "date": "2025-Apr-3",
+  "seed": 112810973,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Apr-3"
 }
