--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-Apr-3",
+  "seed": 1413126591,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1230016389,
-  "date": "2025-Apr-3"
+  "rate": "4.33"
 }
