--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 487175178,
   "date": "2025-Apr-3",
-  "seed": 1413126591,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
