--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1905729639,
   "date": "2025-Apr-4",
-  "rate": "4.33"
+  "seed": 2058295598,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
