--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-4",
-  "seed": 697417121,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 988418358,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-4"
 }
