--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 988418358,
+  "seed": 709391425,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-4"
+  "date": "2025-Apr-4",
+  "rate": "4.33"
 }
