--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 709391425,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Apr-4",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 412317903
 }
