--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1013996019,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 361046755,
   "date": "2025-Apr-4",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
