--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-4",
-  "seed": 832649855
+  "seed": 319548608,
+  "date": "2025-Apr-4"
 }
