--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 6338556,
   "date": "2025-Apr-4",
   "rate": "4.33",
-  "seed": 1300718895
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
