--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 6338556,
-  "date": "2025-Apr-4",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1378061709,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Apr-4"
 }
