--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1378061709,
+  "seed": 1415997475,
   "rate": "4.33",
-  "date": "2025-Apr-4"
+  "date": "2025-Apr-7",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
