--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1415997475,
-  "rate": "4.33",
   "date": "2025-Apr-7",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 492665720
 }
