--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Apr-7",
   "rate": "4.33",
-  "seed": 2057893961,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-7"
+  "seed": 1953113319,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
