--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 346107261,
-  "date": "2025-Apr-7"
+  "date": "2025-Apr-7",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 350000310
 }
