--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-7",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 152292335,
   "rate": "4.33",
-  "seed": 1198962263
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-7"
 }
