--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 152292335,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-7"
+  "seed": 725768892,
+  "date": "2025-Apr-7",
+  "rate": "4.33"
 }
