--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 725768892,
+  "seed": 1291214672,
+  "rate": "4.33",
   "date": "2025-Apr-7",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
