--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1339130497,
+  "date": "2025-Apr-8",
   "rate": "4.33",
-  "seed": 1460540022,
-  "date": "2025-Apr-8"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
