--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1339130497,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-8",
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 54750753,
+  "rate": "4.33"
 }
