--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-8",
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 512912253,
   "rate": "4.33",
-  "seed": 1855450605
+  "date": "2025-Apr-8"
 }
