--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 907912476,
+  "date": "2025-Apr-8",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1440260010,
-  "date": "2025-Apr-8"
+  "rate": "4.33"
 }
