--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 240044652,
+  "seed": 1147534356,
   "rate": "4.33",
-  "date": "2025-Apr-8"
+  "date": "2025-Apr-9",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
