--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1147534356,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Apr-9",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1016393490,
+  "date": "2025-Apr-9"
 }
