--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
   "date": "2025-Apr-9",
-  "seed": 1334174034
+  "seed": 798752606,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
