--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 1593806417,
   "date": "2025-Apr-9",
-  "seed": 208672469
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
