--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-9",
-  "seed": 231218182
+  "seed": 1512230404,
+  "rate": "4.33",
+  "date": "2025-Apr-9"
 }
