--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-9",
   "rate": "4.33",
-  "seed": 917547565
+  "date": "2025-Apr-9",
+  "seed": 796057866,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
