--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 715220732,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-9",
-  "rate": "4.33"
+  "date": "2025-Apr-10",
+  "seed": 211738995
 }
