--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-10",
-  "seed": 211738995
+  "seed": 2058463935,
+  "date": "2025-Apr-10"
 }
