--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 28333976,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2058463935,
-  "date": "2025-Apr-10"
+  "date": "2025-Apr-10",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
