--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 28333976,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Apr-10",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 522002349,
+  "date": "2025-Apr-10"
 }
