--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1949103750,
-  "rate": "4.33",
-  "date": "2025-Apr-10"
+  "date": "2025-Apr-10",
+  "seed": 1937791241,
+  "rate": "4.33"
 }
