--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-10",
-  "seed": 1614157226
+  "rate": "4.33",
+  "seed": 385814975,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
