--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-10",
   "rate": "4.33",
-  "seed": 785175134,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1906599476,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-11"
 }
