--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-Apr-11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1760252106,
-  "date": "2025-Apr-11"
+  "rate": "4.33",
+  "seed": 852910588
 }
