--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1165808697,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-11"
+  "date": "2025-Apr-11",
+  "seed": 76891382,
+  "rate": "4.33"
 }
