--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1454369743,
-  "date": "2025-Apr-11"
+  "seed": 587527153,
+  "date": "2025-Apr-11",
+  "rate": "4.33"
 }
