--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Apr-11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1363112581,
-  "rate": "4.33",
-  "date": "2025-Apr-11"
+  "seed": 1791558096,
+  "rate": "4.33"
 }
