--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Apr-11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1791558096,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1638144452
 }
