--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 2001117267,
-  "date": "2025-Apr-14"
+  "seed": 1264234392,
+  "date": "2025-Apr-14",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
