--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Apr-14",
-  "seed": 1827934937
+  "seed": 487494414,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
