--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 591838387,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-14",
-  "seed": 1613924924
+  "rate": "4.33"
 }
