--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 591838387,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-14",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 658620416,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
