--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1991937774,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-14",
-  "rate": "4.33"
+  "seed": 68290441,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
