--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 1169140616,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 533430869,
-  "date": "2025-Apr-14"
+  "date": "2025-Apr-14",
+  "rate": "4.33"
 }
