--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
+  "date": "2025-Apr-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1341462494,
-  "date": "2025-Apr-14",
-  "rate": "4.33"
+  "seed": 727400033
 }
