--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1784364646,
   "date": "2025-Apr-15",
-  "seed": 698566029
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
