--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1784364646,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-15",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1583980231,
+  "rate": "4.33"
 }
