--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-15",
-  "seed": 1583980231,
-  "rate": "4.33"
+  "seed": 912630365,
+  "rate": "4.33",
+  "date": "2025-Apr-15"
 }
