--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Apr-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 912630365,
   "rate": "4.33",
-  "date": "2025-Apr-15"
+  "seed": 1223632843
 }
