--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-15",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 133828466,
   "rate": "4.33",
-  "seed": 1223632843
+  "date": "2025-Apr-15",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
