--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 133828466,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
   "date": "2025-Apr-15",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 237258797
 }
