--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Apr-15",
-  "seed": 1830505932,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1178946781
 }
