--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-15",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1178946781
+  "seed": 780118915,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-15"
 }
