--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 780118915,
+  "date": "2025-Apr-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-15"
+  "seed": 47494858
 }
