--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Apr-15",
+  "seed": 1336110172,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 47494858
+  "date": "2025-Apr-16",
+  "rate": "4.33"
 }
