--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 302309345,
-  "date": "2025-Apr-16"
+  "date": "2025-Apr-16",
+  "seed": 309407450,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
