--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-16",
   "rate": "4.33",
-  "seed": 11859111
+  "date": "2025-Apr-16",
+  "seed": 2031946464,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
