--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-16",
-  "seed": 2031946464,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 345704848
 }
