--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 910328270,
+  "rate": "4.33",
   "date": "2025-Apr-16",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1729476455,
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
