--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-17",
-  "seed": 1114490231
+  "seed": 1589985521,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
