--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-17",
-  "seed": 1138658221,
-  "rate": "4.33"
+  "seed": 1982049391,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
