--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1417628956,
-  "rate": "4.33",
+  "seed": 1359243499,
+  "date": "2025-Apr-17",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-17"
+  "rate": "4.33"
 }
