--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1359243499,
-  "date": "2025-Apr-17",
+  "rate": "4.33",
+  "seed": 1441503712,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Apr-17"
 }
