--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 1441503712,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-17"
+  "date": "2025-Apr-18*",
+  "seed": 1808607247,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
