--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Apr-18*",
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 680456466,
-  "rate": "4.33"
+  "seed": 1606693067
 }
