--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-18*",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1606693067
+  "seed": 240928751,
+  "date": "2025-Apr-18*",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
