--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 512387493,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 240928751,
-  "date": "2025-Apr-18*",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Apr-18*"
 }
