--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 512387493,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-18*",
   "rate": "4.33",
-  "date": "2025-Apr-18*"
+  "seed": 1777747046,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
