--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
+  "seed": 1097466006,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 602637205,
-  "date": "2025-Apr-18*",
-  "rate": "4.33"
+  "date": "2025-Apr-18*"
 }
