--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Apr-18*",
-  "seed": 140725669,
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1790258722
 }
