--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-Apr-18*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1790258722
+  "date": "2025-Apr-21",
+  "seed": 339369155
 }
