--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "seed": 1161615419,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-21",
-  "seed": 339369155
+  "date": "2025-Apr-21"
 }
