--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 688867932,
   "date": "2025-Apr-21",
-  "seed": 1986076321
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
