--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Apr-21",
-  "rate": "4.33",
-  "seed": 139664159,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 821663149,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
