--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 520909401,
-  "date": "2025-Apr-21",
-  "rate": "4.33"
+  "seed": 600292059,
+  "rate": "4.33",
+  "date": "2025-Apr-21"
 }
