--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 872782558,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-21",
+  "seed": 786813803,
   "rate": "4.33",
-  "date": "2025-Apr-21"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
