--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-21",
-  "seed": 786813803,
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1439387606,
+  "date": "2025-Apr-22",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
