--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 502265308,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Apr-22"
+  "seed": 544789823,
+  "date": "2025-Apr-22",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
