--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 544789823,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-22",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1105095631,
+  "rate": "4.33"
 }
