--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
   "date": "2025-Apr-22",
-  "seed": 895065825,
-  "rate": "4.33"
+  "seed": 1013383530
 }
