--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-22",
-  "rate": "4.33",
+  "seed": 1051260903,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 692247947
+  "rate": "4.33",
+  "date": "2025-Apr-22"
 }
