--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-22",
-  "seed": 952966956,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1710725462,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-22"
 }
