--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2127668466,
   "date": "2025-Apr-22",
-  "seed": 566759327
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
