--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2127668466,
-  "date": "2025-Apr-22",
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1586101981,
+  "date": "2025-Apr-23",
+  "rate": "4.33"
 }
