--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1586101981,
+  "rate": "4.33",
   "date": "2025-Apr-23",
-  "rate": "4.33"
+  "seed": 1478511713,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
