--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 954203861,
-  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-23",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 59069366,
+  "rate": "4.33"
 }
