--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 746015709,
+  "seed": 1271812104,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Apr-23",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Apr-23"
 }
