--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1271812104,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 213295282,
+  "date": "2025-Apr-23",
   "rate": "4.33",
-  "date": "2025-Apr-23"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
