--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1892425462,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 691048305,
   "date": "2025-Apr-23",
-  "rate": "4.33"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
