--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1235907682,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-24",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1620156360
 }
