--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-24",
+  "seed": 2106823153,
   "rate": "4.33",
-  "seed": 1620156360
+  "date": "2025-Apr-24"
 }
