--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Apr-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2106823153,
-  "rate": "4.33",
-  "date": "2025-Apr-24"
+  "seed": 1444158660,
+  "rate": "4.33"
 }
