--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Apr-24",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1588348109,
-  "date": "2025-Apr-24"
+  "seed": 1010207182,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
