--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-24",
-  "rate": "4.33",
-  "seed": 1636053076,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1634904437,
+  "rate": "4.33"
 }
