--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-24",
-  "seed": 1463259772
+  "seed": 259523578,
+  "rate": "4.33",
+  "date": "2025-Apr-25"
 }
