--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 494679956,
-  "date": "2025-Apr-25"
+  "date": "2025-Apr-25",
+  "seed": 1580709783,
+  "rate": "4.33"
 }
