--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Apr-25",
+  "seed": 1626672390,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 502331780,
-  "date": "2025-Apr-25"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
