--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Apr-25",
-  "seed": 186002731
+  "seed": 1944126872,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
