--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1081730888,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-25",
   "rate": "4.33",
-  "date": "2025-Apr-25"
+  "seed": 1145699141
 }
