--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Apr-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-25",
-  "rate": "4.33",
-  "seed": 1145699141
+  "seed": 997138366,
+  "rate": "4.33"
 }
