--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Apr-28",
-  "seed": 767334243,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 2101771392,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
