--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 362933889,
-  "date": "2025-Apr-28",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 19789909,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-28"
 }
