--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 459521501,
+  "date": "2025-Apr-28",
   "rate": "4.33",
-  "seed": 19789909,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-28"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
