--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 644856777,
+  "date": "2025-Apr-28",
   "rate": "4.33",
-  "seed": 1425532511,
-  "date": "2025-Apr-28"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
