--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1654173235,
-  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 977256227,
   "date": "2025-Apr-28",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
