--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 977256227,
-  "date": "2025-Apr-28",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 385572113,
+  "date": "2025-Apr-28"
 }
