--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-29",
+  "seed": 957919259,
   "rate": "4.33",
-  "seed": 385572113,
-  "date": "2025-Apr-28"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
