--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-29",
-  "seed": 957919259,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 53318547,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Apr-29"
 }
