--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 53318547,
+  "seed": 394994229,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-29"
+  "date": "2025-Apr-29",
+  "rate": "4.33"
 }
