--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1747272892,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-29",
-  "seed": 138768173
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
