--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1370796209,
   "date": "2025-Apr-29",
-  "seed": 456017273
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
