--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1370796209,
-  "date": "2025-Apr-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 1678038038,
+  "rate": "4.33",
+  "date": "2025-Apr-29"
 }
