--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1678038038,
+  "seed": 923140494,
   "rate": "4.33",
-  "date": "2025-Apr-29"
+  "date": "2025-Apr-29",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
