--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 2090974988,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-29",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1280635085,
+  "rate": "4.33"
 }
