--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-30",
-  "seed": 124219386,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1215062014
 }
