--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Apr-30",
   "rate": "4.33",
-  "seed": 1215062014
+  "seed": 1184290748,
+  "date": "2025-Apr-30"
 }
