--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 302138968,
+  "date": "2025-Apr-30",
+  "seed": 435330120,
   "rate": "4.33",
-  "date": "2025-Apr-30"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
