--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1905329786,
+  "rate": "4.33",
+  "seed": 1025848863,
   "date": "2025-Apr-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
