--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1025848863,
+  "seed": 1809795864,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-30",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
