--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1809795864,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Apr-30",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
+  "seed": 896343259
 }
