--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Apr-30",
+  "rate": "4.33",
+  "date": "2025-May-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 298512871,
-  "rate": "4.33"
+  "seed": 934845244
 }
