--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-May-1",
+  "seed": 1467387479,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 934845244
+  "date": "2025-May-1"
 }
