--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-May-1",
+  "seed": 1591525507,
   "rate": "4.33",
-  "seed": 558612588,
-  "date": "2025-May-1"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
