--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-May-1",
+  "seed": 788849547,
   "rate": "4.33",
-  "seed": 1264237834
+  "date": "2025-May-1",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
