--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 788849547,
-  "rate": "4.33",
   "date": "2025-May-1",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1194816693,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
