--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-May-1",
-  "seed": 54785513
+  "seed": 1913360999,
+  "rate": "4.33"
 }
