--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 976514012,
+  "date": "2025-May-1",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 673868751,
-  "date": "2025-May-1"
+  "rate": "4.33"
 }
